--- a/src/components/SuperCheckbox/SuperCheckbox.module.css
+++ b/src/components/SuperCheckbox/SuperCheckbox.module.css
@@ -4,8 +4,8 @@
 
 .checkbox {
     display: inline-block;
-    height: 20px;
-    width: 20px;
+    height: 1em;
+    width: 1em;
     background: #fff;
     border: 2px #ddd solid;
     margin-right: 4px;
