--- a/src/views/login/LoginPage.module.css
+++ b/src/views/login/LoginPage.module.css
@@ -8,7 +8,7 @@
     transform: translate(-50%, -50%);
     background: linear-gradient(#141e30, #243b55);
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
     border-radius: 10px;
 }
 
@@ -22,6 +22,7 @@
 .loginBox .userBox {
     position: relative;
 }
+
 .userBox input {
     width: 100%;
     padding: 10px 0;
@@ -33,7 +34,10 @@
     outline: none;
     background: transparent;
 }
-.loginBox  input::-webkit-input-placeholder { color: #03e9f4; }
+
+.loginBox input::-webkit-input-placeholder {
+    color: #03e9f4;
+}
 
 .loginBox button {
     position: relative;
@@ -49,6 +53,7 @@
     letter-spacing: 4px;
     background: linear-gradient(#141e30, #243b55);
 }
+
 .checkbox {
     width: auto;
 }
@@ -58,6 +63,7 @@
     font-size: 20px;
     min-height: 35px;
 }
+
 .loginBox button:hover {
     background: #03e9f4;
     color: #fff;
@@ -93,7 +99,7 @@
     0% {
         left: -100%;
     }
-    50%,100% {
+    50%, 100% {
         left: 100%;
     }
 }
@@ -112,7 +118,7 @@
     0% {
         top: -100%;
     }
-    50%,100% {
+    50%, 100% {
         top: 100%;
     }
 }
@@ -131,7 +137,7 @@
     0% {
         right: -100%;
     }
-    50%,100% {
+    50%, 100% {
         right: 100%;
     }
 }
@@ -150,7 +156,7 @@
     0% {
         bottom: -100%;
     }
-    50%,100% {
+    50%, 100% {
         bottom: 100%;
     }
 }
