--- a/src/views/login/RegistrationPage.module.css
+++ b/src/views/login/RegistrationPage.module.css
@@ -4,19 +4,22 @@
     border: 2px groove;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
     margin: 0 auto;
-    padding-left: 3px;
     border-radius: 15px;
 }
 
 .title {
     display: flex;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
 .button {
+    margin-top: 50px;
     display: flex;
     justify-content: center;
+
 }
 
