--- a/src/views/login/RegistrationPage.module.css
+++ b/src/views/login/RegistrationPage.module.css
@@ -1,13 +1,17 @@
 .signUpBlock {
-    height: 500px;
-    width: 350px;
+    height: 600px;
+    width: 400px;
     border: 2px groove;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    margin: 0 auto;
     border-radius: 15px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 40px;
+    transform: translate(-50%, -50%);
 }
 
 .title {
