--- a/src/components/MultiRangeSlider/multiRangeSlider.module.css
+++ b/src/components/MultiRangeSlider/multiRangeSlider.module.css
@@ -1,24 +1,53 @@
+.container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .slider {
     position: relative;
     width: 200px;
 }
 
 .slider__track,
-.slider__range {
-    border-radius: 3px;
-    height: 5px;
+.slider__range,
+.slider__left_value,
+.slider__right_value {
     position: absolute;
 }
 
+.slider__track,
+.slider__range {
+    border-radius: 3px;
+    height: 5px;
+}
+
 .slider__track {
-    background-color: #ced4da;
+    background-color: #21268F;
+    opacity: 0.5;
     width: 100%;
     z-index: 1;
 }
 
 .slider__range {
-    background-color: #9fe5e1;
+    background-color: #21268F;
     z-index: 2;
+}
+
+.slider__left_value,
+.slider__right_value {
+    color: #dee2e6;
+    font-size: 12px;
+    margin-top: 20px;
+}
+
+.slider__left_value {
+    left: 6px;
+}
+
+.slider__right_value {
+    right: -4px;
 }
 
 /*Remove the default appearance */
@@ -34,6 +63,7 @@
     height: 0;
     width: 200px;
     outline: none;
+
 }
 
 .thumbZIndex3 {
@@ -44,11 +74,16 @@
     z-index: 4;
 }
 
+.thumbZIndex5 {
+    z-index: 5;
+}
+
 .thumb::-webkit-slider-thumb {
     background-color: #f1f1f7;
-    border: none;
+    border: 4px solid #21268F;
     border-radius: 50%;
-    box-shadow: 0 0 1px 1px #ced4da;
+    box-shadow: 0 0 1px 1px #21268F;
+    cursor: pointer;
     height: 18px;
     width: 18px;
     margin-top: 4px;
