--- a/src/views/login/LoginPage.module.css
+++ b/src/views/login/LoginPage.module.css
@@ -12,6 +12,26 @@
     border-radius: 10px;
 }
 
+.forgotPass {
+    color: white;
+    display: flex;
+    justify-content: right;
+    cursor: pointer;
+    font-size: 20px;
+}
+.singUp {
+    color: white;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    margin-top: 10px;
+    font-size: 20px;
+}
+.spanTextAcc{
+    color: white;
+    font-size: 16px;
+    opacity: .5;
+}
 .loginBox h2 {
     margin: 0 0 30px;
     padding: 0;
