--- a/src/components/Preloader/Preloader.module.css
+++ b/src/components/Preloader/Preloader.module.css
@@ -1,3 +1,21 @@
+.loader {
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.5s;
+}
+.loader.active {
+    opacity: 1;
+    pointer-events: all;
+}
 .loading {
     display: flex;
 }
