--- a/src/views/login/LoginPage.module.css
+++ b/src/views/login/LoginPage.module.css
@@ -1,11 +1,8 @@
 
 .loginBox {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    margin: 20px auto;
     width: 400px;
     padding: 40px;
-    transform: translate(-50%, -50%);
     background: linear-gradient(#141e30, #243b55);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
