--- a/src/views/packList/buttonsShowCards/ButtonsShowCards.module.css
+++ b/src/views/packList/buttonsShowCards/ButtonsShowCards.module.css
@@ -1,7 +1,7 @@
 .container {
 
 }
-.allClick{
+.button{
 
 }
 .myClick {
@@ -12,7 +12,7 @@
     background-image: linear-gradient(45deg, #6ab1d7, #33d9de 50%, #002878);
     background-position: 100% 0;
     background-size: 200% 200%;
-    border-radius: 30px;
+    border-radius: 10px;
     box-shadow: 0 16px 32px 0 rgb(0 40 120 / 35%);
     color: #fff;
     cursor: default;
@@ -21,32 +21,37 @@
     font-size: 14px;
     font-weight: 300;
     margin: 10px 20px;
-    padding: 5px 15px;
+    padding: 5px 13px;
     text-decoration: none;
     transition: .5s;
 }
-.myClick:hover {
+.myClickActive{
     box-shadow: 0 0 0 0 rgba(0, 40, 120, 0);
     background-position: 0 0;
 }
-.allClick {
-    background-color:#6ab1d7;
+.button {
+    padding: 5px 10px;
+    color: #21268F;
+    font-size: 13px;
+    font-weight: 600;
+    background-color: #D7D8EF;
+    border-radius: 10px;
+    margin-right: 3px;
+    cursor: pointer;
+}
+.active {
+    background-image: linear-gradient(45deg, #6ab1d7, #33d9de 50%, #002878);
     background-position: 100% 0;
     background-size: 200% 200%;
-    border-radius: 30px;
+    border-radius: 10px;
     box-shadow: 0 16px 32px 0 rgb(0 40 120 / 35%);
-    color: #21268F;
-    cursor: default;
+    color: #fff;
     display: inline-block;
     font-family: Montserrat, sans-serif;
     font-size: 14px;
     font-weight: 300;
     margin: 10px 20px;
-    padding: 5px 15px;
+    padding: 5px 13px;
     text-decoration: none;
     transition: .5s;
-}
-.allClick:hover {
-    box-shadow: 0 0 0 0 #38ffc7;
-    background-position: 0 0;
 }
