replace filter ui in PackListContainer.tsx

--- a/src/components/MultiRangeSlider/multiRangeSlider.module.css
+++ b/src/components/MultiRangeSlider/multiRangeSlider.module.css
@@ -37,7 +37,7 @@
 
 .slider__left_value,
 .slider__right_value {
-    color: #dee2e6;
+    color: #21268F;
     font-size: 12px;
     margin-top: 20px;
 }
