--- a/src/components/NavbarForDevTool/Navbar.module.css
+++ b/src/components/NavbarForDevTool/Navbar.module.css
@@ -1,5 +1,5 @@
 .wrapper {
     display: grid;
     justify-items: center;
-    grid-template-columns: repeat(8,1fr);
+    grid-template-columns: repeat(8, 1fr);
 }
